index.html: Added site structure components

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>CSS Variables</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="navbar"></header>
+        <div class="main"></div>
+        <footer class="footer"></footer>
+    </div>
 </body>
 </html>
