--- a/index.html
+++ b/index.html
@@ -9,9 +9,39 @@
     </head>
     <body>
         <div class="wrapper">
-            <header class="navbar"></header>
-            <div class="main"></div>
-            <footer class="footer"></footer>
+            <header class="navbar">
+                <nav class="nav">
+                    <ul class="horizontal-list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>              
+                </nav>
+            </header>
+            <main class="main">
+                <h1 class="center">My Awesome Portfolio</h1>
+                <div class="grid center">
+                    <div class="cards">
+                        <h2>Project A</h2>
+                        <button>Learn More</button>
+                    </div>
+                    <div class="cards">
+                        <h2>Project B</h2>
+                        <button>Learn More</button>
+                    </div>
+                    <div class="cards">
+                        <h2>Project C</h2>
+                        <button>Learn More</button>
+                    </div>
+                    <div class="cards">
+                        <h2>Project D</h2>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+            </main>
+            <footer class="footer">
+                <p class="text-center">Made with :-) in Norway</p>
+            </footer>
         </div>
     </body>
 </html>
